--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,7 @@
             
             <div class="media-container">
                 
-                <video autoplay loop muted playsinline style="width: 100%; height: 100%;" class="main-gif">
+                <video autoplay loop muted playsinline style="width: 80%; height: auto;" class="main-gif">
                     <source src="love.mp4" type="video/mp4">
                 </video>
             </div>
@@ -29,5 +29,6 @@
 </body>
 
 </html>
+
 
 
